@@ -1,9 +1,6 @@
 ﻿using System.Reflection;
 using System.Runtime.InteropServices;
 
-// General Information about an assembly is controlled through the following 
-// set of attributes. Change these attribute values to modify the information
-// associated with an assembly.
 [assembly: AssemblyTitle("TinyNvidiaUpdateChecker")]
 [assembly: AssemblyDescription("Check for NVIDIA GPU drivers, GeForce Experience replacer")]
 [assembly: AssemblyConfiguration("")]
@@ -13,23 +10,14 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
-// Setting ComVisible to false makes the types in this assembly not visible 
-// to COM components.  If you need to access a type in this assembly from 
-// COM, set the ComVisible attribute to true on that type.
 [assembly: ComVisible(false)]
 
-// The following GUID is for the ID of the typelib if this project is exposed to COM
 [assembly: Guid("78ea4041-848c-4a45-b9c1-c56546b1fd05")]
 
-// Version information for an assembly consists of the following four values:
-//
+// Version information for this assembly consists of the following three values:
 //      Major Version
 //      Minor Version 
-//      Build Number
-//      Revision
-//
-// You can specify all the values or you can default the Build and Revision Numbers 
-// by using the '*' as shown below:
-// [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("1.2.0.0")]
-[assembly: AssemblyFileVersion("1.2.0.0")]
+//      Patch Version
+// Following the Semantic Versioning 2.0.0 standard; see http://semver.org/spec/v2.0.0.html.
+[assembly: AssemblyVersion("1.2.0")]
+[assembly: AssemblyFileVersion("1.2.0")]
