@@ -1,0 +1,13 @@
+﻿<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title>TinyNvidiaUpdateChecker</title>
+</head>
+<body>
+
+    <a>Current version: </a> <a id="currentVersion">1.2.0</a>
+
+</body>
+</html>
